Extract similar logic of exporting to the method